[package]
name = "ch2-ownership-mut-borrow"
version = "0.1.0"
authors = ["Tobias Ford <toby.ford@pobox.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
